[package]
name = "pjdfs_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
exacl = "0.9.0"
libc = "0.2.133"
tempfile = "3.3.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
nix = { version = "0.25.0", features = ["fs", "socket"] }
thiserror = "1.0.31"
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"
anyhow = "1.0.57"
once_cell = "1.12.0"
paste = "1.0.7"
gumdrop = "0.8.1"
figment = { version = "0.10.6", features = ["toml"] }
serde = { version = "1.0.138", features = ["derive"] }
inventory = "0.3.0"
walkdir = "2.3.2"
caps = "0.5.4"

[[bin]]
name = "pjdfstest"
path = "src/main.rs"
