[package]
name = "pjdfs_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
exacl = "0.9.0"
tempfile = "3.4.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"
anyhow = "1.0.57"
paste = "1.0.7"
gumdrop = "0.8.1"
figment = { version = "0.10.6", features = ["toml"] }
nix = { version = "0.26.0", features = ["fs", "socket", "mount"] }
serde = { version = "1.0.138", features = ["derive"] }
inventory = "0.3.0"
walkdir = "2.3.2"
sysctl = "0.5.2"

[target.'cfg(target_os = "freebsd")'.dependencies]
jail = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.4"

[[bin]]
name = "pjdfstest"
path = "src/main.rs"
